--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<script src="./golos.min.js"></script>
-golos.config.set('websocket','wss://ws.golos.io');
-golos.config.set('address_prefix','GLS');
-golos.config.set('chain_id','782a3039b478c839e4cb0c941ff4eaeb7df40bdd68bd441afd444b9da763de12');
+<script src='./golos.min.js'></script>
+<script>
+  window.addEventListener('load', (event) => {
+    golos.config.set('websocket', 'wss://ws.testnet.golos.io');
+
+    golos.api.getAccounts(['melnikaite'], (err, result) => {
+      console.log(err, result);
+    });
+  });
+</script>
