--- a/index.html
+++ b/index.html
@@ -80,22 +80,54 @@
 				</form>
 			</div>
 			<div id="projects">
-				<div class="row">
-					<div class="col-4">
-						<img src="https://www.kickico.com/assets/_images/44435/45d7bae62096468.png" width="100" height="100" />
-					</div>
-					<div class="col-8">
+				<div class="card">
+					<div class="card-body">
 						<div class="row">
-							Title
-						</div>
-						<div class="row">
-							Author
-						</div>
-						<div class="row">
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-						</div>
-						<div class="row">
-							<progress value="10" max="100"></progress>
+							<div class="col-4">
+								<img class="img-fluid" src="https://www.kickico.com/assets/_images/44435/45d7bae62096468.png">
+							</div>
+							<div class="col-8">
+								<div class="row">
+									<div class="col">
+										<h2><a href="#">GolosICO</a></h2>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col">
+										<p>By&nbsp;<a href="https://golos.io/@melnikaite">@melnikaite</a></p>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col">
+										<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+									</div>
+								</div>
+								<div class="progress" style="height: 20px;">
+									<div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">6865 GOLOS</div>
+								</div>
+								<div class="row">
+									<div class="col">
+										<strong>6865 GOLOS</strong>
+									</div>
+									<div class="col text-center">
+										<strong>14</strong>
+									</div>
+									<div class="col text-right">
+										<strong>10000 GOLOS</strong>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col">
+										Raised
+									</div>
+									<div class="col text-center">
+										Backers
+									</div>
+									<div class="col text-right">
+										Soft cap
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -113,3 +145,6 @@
 <script src="./golos.min.js"></script>
 <script src="./ico.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+<script src="./actions.js"></script>
