--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
 	<body>
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<a class="navbar-brand" href="#">GolosICO</a>
+				<a class="navbar-brand" href="#">golosICO</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="#">Projects <span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="#" id="projects_call_btn">Projects <span class="sr-only">(current)</span></a>
 						</li>
-						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Create campaign</button>
+						<button class="btn btn-outline-success my-2 my-sm-0" id="create_campaign_call_btn">Create campaign!</button>
+					</ul>
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item">
+							<a class="nav-link" target="_blank" href="https://github.com/melnikaite/golosico">Github <span class="sr-only">(current)</span></a>
+						</li>
 					</ul>
 				</div>
 			</nav>
@@ -26,7 +31,7 @@
 		<main role="main" class="container">
 			<div id="projects">
 			</div>
-			<div id="create_campaign">
+			<div class="d-none" id="create_campaign">
 				<h1>Start building your campaign!</h1>
 				<form method="POST" enctype="multipart/form-data">
 					<div class="form-group">
