--- a/index.html
+++ b/index.html
@@ -153,6 +153,32 @@
 		</div>
 	</div>
 </div>
+	
+
+<div class="modal" tabindex="-1" role="dialog" id="buy_assets_modal">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Buy assets</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<form>
+					<div class="form-group">
+						<label for="exampleInputEmail1">GOLOS amount:</label>
+						<input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter GOLOS ammount">
+					</div>
+					<button type="submit" class="btn btn-primary">Buy</button>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 </html>
