+ added button buy token

--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
 								Soft cap
 							</div>
 						</div>
+						<div class="row">
+							<div class="col">
+								<button class="btn btn-primary buy_assets_call_btn">Buy asset</button>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
