--- a/index.html
+++ b/index.html
@@ -175,6 +175,14 @@
 						<label for="golos_amount">GOLOS amount:</label>
 						<input type="number" class="form-control" id="golos_amount" name="golos_amount" aria-describedby="emailHelp" placeholder="Enter GOLOS ammount" required="">
 					</div>
+					<div class="form-group">
+						<label for="login">Username:</label>
+						<input type="text" class="form-control" id="login" name="login" aria-describedby="emailHelp" placeholder="Enter your login @golos" required="">
+					</div>
+					<div class="form-group">
+						<label for="password">Password:</label>
+						<input type="password" class="form-control" id="password" name="password" aria-describedby="emailHelp" placeholder="Enter your password" required="">
+					</div>
 					<button type="submit" class="btn btn-primary">Buy</button>
 				</form>
 			</div>
