--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 					</ul>
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item">
+							<a class="nav-link" href="#" id="my_assets_call_btn">My assets <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" target="_blank" href="https://github.com/melnikaite/golosico">Github <span class="sr-only">(current)</span></a>
 						</li>
 					</ul>
@@ -186,6 +189,50 @@
 					</div>
 					<button type="submit" class="btn btn-primary">Buy</button>
 				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<div class="modal" tabindex="-1" role="dialog" id="my_assets_modal">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">My assets</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<div class="row">
+					<div class="col">
+						<form>
+							<div class="form-group">
+								<label for="login">Username:</label>
+								<input type="text" class="form-control" id="login" name="login" aria-describedby="emailHelp" placeholder="Enter your login @golos" required="" value="melnikaite">
+							</div>
+							<button type="submit" class="btn btn-primary">Get information</button>
+						</form>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<div class="col">
+						<table class="table-striped table-bordered table-hover d-none" id="my_assets_table">
+							<thead>
+								<tr>
+									<th>Asset count Asset name</th>
+								</tr>
+							</thead>
+							<tbody>
+							</tbody>
+						</table>
+					</div>
+				</div>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
