--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
 						<label for="shotdescription">Shot description</label>
 						<input type="text" class="form-control" id="shotdescription" placeholder="Shot description" name="short_description">
 					</div>
+					<div class="form-group">
+						<label for="login">Username:</label>
+						<input type="text" class="form-control" id="login" name="login" aria-describedby="emailHelp" placeholder="Enter your login @golos" required="">
+					</div>
+					<div class="form-group">
+						<label for="password">Password:</label>
+						<input type="password" class="form-control" id="password" name="password" aria-describedby="emailHelp" placeholder="Enter your password" required="">
+					</div>
+					<div class="form-group">
+						<label for="end_data">End date</label>
+						<input type="text" class="form-control" id="end_data" name="end_data">
+					</div>
 					<!--<div class="form-group">
 						<label class="custom-file">
 							<input type="file" id="file2" class="custom-file-input">
