--- a/index.html
+++ b/index.html
@@ -9,25 +9,27 @@
 	<body>
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<a class="navbar-brand" href="#">golosICO</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="#" id="projects_call_btn">Projects <span class="sr-only">(current)</span></a>
-						</li>
-						<button class="btn btn-outline-success my-2 my-sm-0" id="create_campaign_call_btn">Create campaign!</button>
-					</ul>
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item">
-							<a class="nav-link" href="#" id="my_assets_call_btn">My assets <span class="sr-only">(current)</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" target="_blank" href="https://github.com/melnikaite/golosico">Github <span class="sr-only">(current)</span></a>
-						</li>
-					</ul>
+				<div class="container">
+					<a class="navbar-brand" href="#">golosICO</a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav mr-auto">
+							<li class="nav-item active">
+								<a class="nav-link" href="#" id="projects_call_btn">Projects <span class="sr-only">(current)</span></a>
+							</li>
+							<button class="btn btn-outline-success my-2 my-sm-0" id="create_campaign_call_btn">Create campaign!</button>
+						</ul>
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<a class="nav-link" href="#" id="my_assets_call_btn">My assets <span class="sr-only">(current)</span></a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" target="_blank" href="https://github.com/melnikaite/golosico">Github <span class="sr-only">(current)</span></a>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</nav>
 		</header>
@@ -75,7 +77,7 @@
 					</div>
 					<div class="form-group">
 						<label for="end_data">End date</label>
-						<input type="text" class="form-control" id="end_data" name="end_data">
+						<input type="date" class="form-control" id="end_data" name="end_data">
 					</div>
 					<!--<div class="form-group">
 						<label class="custom-file">
