+ need more times

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<input type="text" class="form-control" id="asset_name" name="asset_name">
 					</div>
 					<div class="form-group">
-						<label for="softcap">Soft cap</label>
+						<label for="softcap">Cap</label>
 						<input type="number" class="form-control" id="softcap" name="softcap">
 					</div>
 					<div class="form-group">
@@ -162,9 +162,6 @@
 							<div class="col">
 								<strong class="projects-row-raised"></strong>
 							</div>
-							<div class="col text-center">
-								<strong class="projects-row-backers"></strong>
-							</div>
 							<div class="col text-right">
 								<strong class="projects-row-softcap"></strong>
 							</div>
@@ -173,14 +170,12 @@
 							<div class="col">
 								Raised
 							</div>
-							<div class="col text-center">
-								Backers
-							</div>
 							<div class="col text-right">
-								Soft cap
+								Cap
 							</div>
 						</div>
 						<input type="hidden" name="asset_name">
+						<br>
 						<div class="row">
 							<div class="col">
 								<button class="btn btn-primary buy_assets_call_btn">Buy asset</button>
