--- a/index.html
+++ b/index.html
@@ -41,31 +41,31 @@
 				<form method="post">
 					<div class="form-group">
 						<label for="campaignname">Campaign name</label>
-						<input type="text" class="form-control" id="campaignname" placeholder="Campaign name" name="compaign_name">
+						<input type="text" class="form-control" id="campaignname" placeholder="Campaign name" name="compaign_name" required="">
 					</div>
 					<div class="form-group">
 						<label for="description">Compaign description</label>
-						<textarea class="form-control" id="description" rows="3" name="description"></textarea>
+						<textarea class="form-control" id="description" rows="3" name="description" required=""></textarea>
 					</div>
 					<div class="form-group">
 						<label for="asset_name">Asset name</label>
-						<input type="text" class="form-control" id="asset_name" name="asset_name">
+						<input type="text" class="form-control" id="asset_name" name="asset_name" required="">
 					</div>
 					<div class="form-group">
 						<label for="softcap">Cap</label>
-						<input type="number" class="form-control" id="softcap" name="softcap">
+						<input type="number" class="form-control" id="softcap" name="softcap" required="">
 					</div>
 					<div class="form-group">
 						<label for="asset_amount">Asset amount</label>
-						<input type="number" class="form-control" id="asset_amount" name="asset_amount">
+						<input type="number" class="form-control" id="asset_amount" name="asset_amount" required="">
 					</div>
 					<div class="form-group">
 						<label for="golos_amount">Golos amount</label>
-						<input type="number" class="form-control" id="golos_amount" name="golos_amount">
+						<input type="number" class="form-control" id="golos_amount" name="golos_amount" required="">
 					</div>
 					<div class="form-group">
 						<label for="shotdescription">Shot description</label>
-						<input type="text" class="form-control" id="shotdescription" placeholder="Shot description" name="short_description">
+						<input type="text" class="form-control" id="shotdescription" placeholder="Shot description" name="short_description" required="">
 					</div>
 					<div class="form-group">
 						<label for="login">Username:</label>
@@ -77,7 +77,7 @@
 					</div>
 					<div class="form-group">
 						<label for="end_data">End date</label>
-						<input type="date" class="form-control" id="end_data" name="end_data">
+						<input type="date" class="form-control" id="end_data" name="end_data" required="">
 					</div>
 					<!--<div class="form-group">
 						<label class="custom-file">
