+ alpha version is done!

--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav mr-auto">
 							<li class="nav-item active">
-								<a class="nav-link" href="#" id="projects_call_btn">Projects <span class="sr-only">(current)</span></a>
+								<button class="btn btn-success my-2 my-sm-0" id="projects_call_btn">Projects</button>
 							</li>
-							<button class="btn btn-outline-success my-2 my-sm-0" id="create_campaign_call_btn">Create campaign!</button>
+							<li class="nav-item">
+								<button class="btn btn-success my-2 my-sm-0" id="create_campaign_call_btn">Create campaign!</button>
+							</li>
 						</ul>
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<a class="nav-link" href="#" id="my_assets_call_btn">My assets <span class="sr-only">(current)</span></a>
+								<button class="btn btn-success my-2 my-sm-0" id="my_assets_call_btn">My assets</button>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" target="_blank" href="https://github.com/melnikaite/golosico">Github <span class="sr-only">(current)</span></a>
+								<a class="nav-link" target="_blank" href="https://github.com/melnikaite/golosico">Github</a>
 							</li>
 						</ul>
 					</div>
