+ alpha version is done!!!

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 						<form>
 							<div class="form-group">
 								<label for="login">Username:</label>
-								<input type="text" class="form-control" id="login" name="login" aria-describedby="emailHelp" placeholder="Enter your login @golos" required="" value="melnikaite">
+								<input type="text" class="form-control" id="login" name="login" aria-describedby="emailHelp" placeholder="Enter your login @golos" required="" value="">
 							</div>
 							<button type="submit" class="btn btn-primary">Get information</button>
 						</form>
