--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
 				<div class="container">
-					<a class="navbar-brand" href="#">golosICO</a>
+					<a class="navbar-brand" href="#">golosICO <span class="text-danger">alpha</span></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
