--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 								<button class="btn btn-success my-2 my-sm-0" id="my_assets_call_btn">My assets</button>
 							</li>
 							<li class="nav-item">
+								<a class="btn btn-info my-2 my-sm-0" target="_blank" href="https://testnet.golos.io">Testnet</a>
+							</li>
+							<li class="nav-item">
 								<a class="nav-link" target="_blank" href="https://github.com/melnikaite/golosico">Github</a>
 							</li>
 						</ul>
