+ add about window

--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 								<button class="btn btn-success my-2 my-sm-0" id="my_assets_call_btn">My assets</button>
 							</li>
 							<li class="nav-item">
+								<button class="btn btn-primary my-2 my-sm-0" id="about_golosico_call_btn">About</button>
+							</li>
+							<li class="nav-item">
 								<a class="btn btn-info my-2 my-sm-0" target="_blank" href="https://testnet.golos.io">Testnet</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" target="_blank" href="https://github.com/melnikaite/golosico">Github</a>
+								<a class="nav-link" target="_blank" href="https://github.com/melnikaite/golosico">GitHub</a>
 							</li>
 						</ul>
 					</div>
@@ -131,7 +134,7 @@
 		</main>
 		<footer class="footer">
 			<div class="container">
-				<span class="text-muted">GolosICO @ 2017</span>
+				<span class="text-muted">golosICO @ 2017</span>
 			</div>
 		</footer>
 	</body>
@@ -301,6 +304,20 @@
 		</div>
 	</div>
 </div>
+	
+
+<div class="d-none" id="about_golosico_html">
+	<p class="float-left text-left">
+		golosICO - platform for holding ICO companies on the blockchain <a target="_blank" href="https://golos.io">Golos</a>! This platform is a thin client, that is, it works without a backend (only frontend and blockchain) directly on the GitHub Pages (through CloudFlare).
+	</p>
+	<ul class="float-left text-left">
+		We use:
+		<li><a target="_blank" href="https://github.com/GolosChain/golos-js">Golos.js</a> - the JavaScript API for Golos blockchain;</li>
+		<li><a target="_blank" href="https://github.com/twbs/bootstrap">Bootstrap</a> - the most popular HTML, CSS, and JavaScript framework for developing responsive, mobile first projects on the web.</li>
+		<li><a target="_blank" href="https://github.com/jquery/jquery">jQuery</a> - is a fast, small, and feature-rich JavaScript library;</li>
+		<li><a target="_blank" href="https://github.com/limonte/sweetalert2">SweetAlert2</a> - a beautiful, responsive, customizable, accessible replacement for JavaScript's popup boxes.</li>
+	</ul>
+</div>
 
 
 </html>
@@ -308,7 +325,7 @@
 <script src="./golos.min.js"></script>
 <script src="./golos-wrapper.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>-->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 <script src="https://unpkg.com/sweetalert2@7.0.9/dist/sweetalert2.all.js"></script>
 <script src="./app.js"></script>
