* edits english text

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
 <div class="d-none" id="about_golosico_html">
 	<p class="float-left text-left">
-		golosICO - platform for holding ICO companies on the blockchain <a target="_blank" href="https://golos.io">Golos</a>! This platform is a thin client, that is, it works without a backend (only frontend and blockchain) directly on the GitHub Pages (through CloudFlare).
+		golosICO - platform for holding ICO companies on the blockchain <a target="_blank" href="https://golos.io">Golos</a>! This platform is a thin client, that works without a backend (only frontend and blockchain) directly on the GitHub Pages (through CloudFlare).
 	</p>
 	<ul class="float-left text-left">
 		We use:
