--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 	<ul class="float-left text-left">
 		We use:
 		<li><a target="_blank" href="https://github.com/GolosChain/golos-js">Golos.js</a> - the JavaScript API for Golos blockchain;</li>
-		<li><a target="_blank" href="https://github.com/twbs/bootstrap">Bootstrap</a> - the most popular HTML, CSS, and JavaScript framework for developing responsive, mobile first projects on the web.</li>
+		<li><a target="_blank" href="https://github.com/twbs/bootstrap">Bootstrap</a> - the most popular HTML, CSS, and JavaScript framework for developing responsive, mobile first projects on the web;</li>
 		<li><a target="_blank" href="https://github.com/jquery/jquery">jQuery</a> - is a fast, small, and feature-rich JavaScript library;</li>
 		<li><a target="_blank" href="https://github.com/limonte/sweetalert2">SweetAlert2</a> - a beautiful, responsive, customizable, accessible replacement for JavaScript's popup boxes.</li>
 	</ul>
