--- a/index.html
+++ b/index.html
@@ -56,17 +56,19 @@
 						<label for="asset_name">Asset name</label>
 						<input type="text" class="form-control" id="asset_name" name="asset_name" required="">
 					</div>
-					<div class="form-group">
-						<label for="softcap">Cap</label>
-						<input type="number" class="form-control" id="softcap" name="softcap" required="">
-					</div>
-					<div class="form-group">
-						<label for="asset_amount">Asset amount</label>
-						<input type="number" class="form-control" id="asset_amount" name="asset_amount" required="">
-					</div>
-					<div class="form-group">
-						<label for="golos_amount">Golos amount</label>
-						<input type="number" class="form-control" id="golos_amount" name="golos_amount" required="">
+					<div class="form-row" style="margin-bottom: 1rem;">
+						<div class="col-4">
+							<label for="softcap">Cap</label>
+							<input type="number" class="form-control" id="softcap" name="softcap" required="">
+						</div>
+						<div class="col-4">
+							<label for="asset_amount">Asset amount</label>
+							<input type="number" class="form-control" id="asset_amount" name="asset_amount" required="">
+						</div>
+						<div class="col-4">
+							<label for="golos_amount">Golos amount</label>
+							<input type="number" class="form-control" id="golos_amount" name="golos_amount" required="">
+						</div>
 					</div>
 					<div class="form-group">
 						<label for="shotdescription">Shot description</label>
@@ -120,7 +122,7 @@
 						<div class="card-body">
 							<h4 class="card-title">Socials</h4>
 							<div class="form-row" style="margin-bottom: 1rem;">
-								<div class="col-auto">
+								<div class="col-4">
 									<label class="sr-only">Social:</label>
 									<select class="form-control" name="social-type[]">
 										<option selected>Choose social...</option>
@@ -130,11 +132,11 @@
 										<option value="google">Google+</option>
 									</select>
 								</div>
-								<div class="col-auto">
+								<div class="col-7">
 									<label class="sr-only">Url:</label>
 									<input type="text" class="form-control" name="social[]" placeholder="http://...">
 								</div>
-								<div class="col-auto">
+								<div class="col-1">
 									<button type="button" class="btn btn-primary" id="social-add-btn">Add</button>
 								</div>
 							</div>
